temporal-verifier/tests/examples/snapshots/fail/safety1_ind.fly.cvc5.snap
---
source: temporal-verifier/tests/test_examples.rs
description: "--expect-fail --all-solvers -- verify tests/examples/fail/safety1_ind.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
verification errors:
error: invariant is not inductive
   ┌─ tests/examples/fail/safety1_ind.fly:10:1
   │
10 │ assert always !p
   │ ^^^^^^^^^^^^^^^^
   │
   = counter example:
     state 0:
     p = false
     q = true
     
     state 1:
     p = true
     q = true


